--- a/microapps/OverviewMapApp/app/src/main/res/values/themes.xml
+++ b/microapps/OverviewMapApp/app/src/main/res/values/themes.xml
@@ -19,5 +19,5 @@
 
 <resources>
 
-    <style name="Theme.OverviewMapAppApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.OverviewMapApp" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
